2016-01-13  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands/SMC.cs:
	* DiscImageChef.Devices.csproj:
	  Added read-only Streaming Commands.

	* Device/ScsiCommands/SSC.cs:
	  Added READ ATTRIBUTE.

	* Device/ScsiCommands/MMC.cs:
	  Corrected typo on header

	* Device/ScsiCommands/SPC.cs:
	  Corrected buffer mislength.
	Added support for READ ATTRIBUTE.

	* Enums.cs:
	  Corrected opcode for SCSI WRITE ATTRIBUTE.
	Added SCSI Streaming and Attribute enumerations.

2016-01-11  Natalia Portillo  <claunia@claunia.com>

	* Device/ScsiCommands.cs:
	* Device/ScsiCommands/MMC.cs:
	* Device/ScsiCommands/NEC.cs:
	* Device/ScsiCommands/SPC.cs:
	* Device/ScsiCommands/SBC.cs:
	* DiscImageChef.Devices.csproj:
	* Device/ScsiCommands/Plextor.cs:
	* Device/ScsiCommands/Pioneer.cs:
	* Device/ScsiCommands/HL-DT-ST.cs:
	  Separated SCSI commands by category/vendor.

2016-01-11  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Added Plextor vendor commands.

2015-12-31  Natalia Portillo  <claunia@claunia.com>

	* Device/Variables.cs:
	* Device/Constructor.cs:
	  Added support for FireWire devices.

2015-12-31  Natalia Portillo  <claunia@claunia.com>

	* Device/Constructor.cs:
	  Added support for USB on Linux.

	* Device/Variables.cs:
	  Added support for USB detection and metadata.

	* Linux/Extern.cs:
	* Linux/Command.cs:
	  Added readlink(3) support, for getting symlink destinations.

2015-12-30  Natalia Portillo  <claunia@claunia.com>

	* Device/Variables.cs:
	* Device/Constructor.cs:
	  Added an IsRemovable field.

	* Device/ScsiCommands.cs:
	  Fixed SCSI READ CAPACITY CDB size.
	Fixed READ CD-DA MSF method name.
	Implemented SCSI SEEK (6) and SEEK (10) commands.

	* Linux/Command.cs:
	* Windows/Command.cs:
	  Fixed memory leaking on unmanaged heap.

2015-12-26  Natalia Portillo  <claunia@claunia.com>

	* Enums.cs:
	* Device/ScsiCommands.cs:
	  Added all known READ, READ LONG, READ CD and READ CD-DA
	  commands.
